fix link image card and style.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1>
                     <a href="/">#30DaysOfJavaScript</a>
                 </h1>
-                <p>by <a href="">Van Ribeiro</a></p>
+                <p>coded by <a href="https://vanribeiro.github.io">Van Ribeiro</a></p>
             </div>
             <div class="text">
                 <p>Because I need to improve my VanillaJS skills, 
@@ -30,8 +30,10 @@
                     <section class="card">
                         <header>
                             <figure>
-                                <img class="img-fluid" src="/images/challenges/01.javascript-drum-kit.png" alt="JavaScript Drum Kit">
-                                <figcaption><h2>Day 01 - JavaScript Drum Kit</h2></figcaption>
+                                <a href="/challenge-files/01 - JavaScript Drum Kit/index.html">
+                                    <img class="img-fluid" src="/images/challenges/01.javascript-drum-kit.png" alt="JavaScript Drum Kit">
+                                    <figcaption><h2>Day 01 - JavaScript Drum Kit</h2></figcaption>
+                                </a>
                             </figure>
                         </header>
                         <main>
@@ -45,8 +47,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>2020</p>
-            <p>by <a href="https://vanribeiro.github.io">Van Ribeiro</a></p>
+            <p>2020 - coded by <a href="https://vanribeiro.github.io">Van Ribeiro</a></p>
         </div>
     </footer>
 </body>
