--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <header>
                             <figure>
                                 <a href="/challenge-files/01 - JavaScript Drum Kit/index.html">
-                                    <img class="img-fluid" src="/images/challenges/01.javascript-drum-kit.png" alt="JavaScript Drum Kit">
+                                    <img class="img-fluid" src="/images/challenges/01-javascript-drum-kit.png" alt="JavaScript Drum Kit">
                                     <figcaption><h2>Day 01 - JavaScript Drum Kit</h2></figcaption>
                                 </a>
                             </figure>
@@ -39,6 +39,22 @@
                         <main>
                             <a href="/challenge-files/01 - JavaScript Drum Kit/index.html">Demo</a> |
                             <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/01%20-%20JavaScript%20Drum%20Kit">Code</a>
+                        </main>
+                    </section>
+                </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/02 - JS and CSS Clock/index.html">
+                                    <img class="img-fluid" src="/images/challenges/02-js-and-css-clock.png" alt="JS and CSS Clock">
+                                    <figcaption><h2>Day 02 - JS and CSS Clock</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/02 - JS and CSS Clock/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/02%20-%20JS%20and%20CSS%20Clock">Code</a>
                         </main>
                     </section>
                 </div>
