feat: do day 03. doc: write the readme of the day 03.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/03 - CSS Variables/index.html">
+                                    <img class="img-fluid" src="/images/challenges/03-update-css-varibles-with-js.png" alt="JS and CSS Clock">
+                                    <figcaption><h2>Day 03 - Playing with CSS Variables and JS</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/03 - CSS Variables/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/03%20-%20CSS%20Variables">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
     </main>
