--- a/challenge-files/04 - Array Cardio Day 1/index-START.html
+++ b/challenge-files/04 - Array Cardio Day 1/index-START.html
@@ -9,123 +9,17 @@
 <body>
   <div class="container">
     <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-    <main> </main>
+    <main class="main"> 
+      <header>
+        <h1>Inventors</h1>
+      </header>
+      <div id="content"></div>
+    </main>
     <footer>
       <p>coded by <a href="vanribeiro.github.io/">Van Ribeiro</a></p>
     </footer>
   </div>
   
-  <script>
-    // Get your shorts on - this is an array workout!
-    // ## Array Cardio Day 1
-
-    // Some data we can work with
-
-    const inventors = [
-      { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
-      { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
-      { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
-      { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
-      { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
-      { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
-      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
-      { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
-      { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
-      { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
-    ];
-
-    const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
-
-function showInventors(initial, end, inventors) {
-  let countInventors = Object.keys(inventors).length;
-  const main = document.querySelector("main");
-  const header = document.createElement("header");
-  const h1 = document.createElement("h1");
-  main.appendChild(header);
-  header.appendChild(h1);
-
-  h1.textContent = "Period:" + ` ${initial} to ${end}`;
-  for(let i = 0; i < countInventors; i++){
-      const section = document.createElement("section");
-      const id = document.createElement("span");
-      const name = document.createElement("p");
-      const year = document.createElement("p");
-      const passed = document.createElement("p");
-
-      main.appendChild(section);
-      
-
-      let x = i +1;
-      id.textContent = x;
-      name.textContent = "Name: " + inventors[i].first + " " + inventors[i].last;
-      year.textContent = "Year: " + inventors[i].year;
-      passed.textContent = "Passed: " + inventors[i].passed;
-
-      section.appendChild(id);
-      section.appendChild(name);
-      section.appendChild(year);
-      section.appendChild(passed);
-
-
-  }
-      
-}
-
-
-// showInventors(inventors);
-
-    // Array.prototype.filter()
-    // 1. Filter the list of inventors for those who were born in the 1500's
-
-    //Long Version
-    const fifteen = inventors.filter(function (inventor) {
-      if(inventor.year >= 1500 && inventor.year < 1600 ){
-        return true;
-      } else{
-        return false;
-      }
-    });
-
-    //Short Version
-    const sixteen = inventors.filter(
-      inventor => (inventor.year >= 1600 && inventor.year < 1700));
-
-    const filterInventors = (initial, end) => {
-      return inventors.filter(inventor =>
-        (inventor.year >= initial && inventor.year < end ));
-    }
-
-    let initial = 1400;
-    let end = 1900; 
-    showInventors(initial, end, filterInventors(initial, end));
-    console.table(filterInventors(1400, 1900));
-
-
-    //---------------------------------------------------------------
-    // Array.prototype.map()
-    // 2. Give us an array of the inventors first and last names
-
-    // Array.prototype.sort()
-    // 3. Sort the inventors by birthdate, oldest to youngest
-
-    // Array.prototype.reduce()
-    // 4. How many years did all the inventors live all together?
-
-    // 5. Sort the inventors by years lived
-
-    // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
-    // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
-
-    // 7. sort Exercise
-    // Sort the people alphabetically by last name
-
-    // 8. Reduce Exercise
-    // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
-  </script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
