finish the 4th day.

--- a/challenge-files/04 - Array Cardio Day 1/index-START.html
+++ b/challenge-files/04 - Array Cardio Day 1/index-START.html
@@ -8,12 +8,25 @@
 </head>
 <body>
   <div class="container">
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-    <main class="main"> 
+    <main class="main">
       <header>
         <h1>Inventors</h1>
       </header>
-      <div id="content"></div>
+      <div class="using-filter-function section-datas">
+        <div id="content"></div>
+      </div>
+      <div class="using-map section-datas">
+        <header>
+          <h2>List Full Name</h2>
+        </header>
+        <ul class="list-names"></ul>
+      </div>
+      <div class="using-sort section-datas">
+        <header>
+          <h2>Order By Year</h2>
+        </header>
+        <div class="order-by-year"></div>
+      </div>
     </main>
     <footer>
       <p>coded by <a href="vanribeiro.github.io/">Van Ribeiro</a></p>
