add view of day 04.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/04 - Array Cardio Day 1/index.html">
+                                    <img class="img-fluid" src="/images/challenges/04-array-cardio.png" alt="Array Cardio - Day 01">
+                                    <figcaption><h2>Day 04 - Array Cardio 💪</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/04 - Array Cardio Day 1/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/04%20-%20Array%20Cardio%20Day%201">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
