create readme day 05.

--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
                             <figure>
                                 <a href="/challenge-files/05 - Flex Panel Gallery/index.html">
                                     <img class="img-fluid" src="/images/challenges/05-flex-panel-image-gallery.jpg" alt="Flex Panel Image Gallery">
-                                    <figcaption><h2>Day 04 - Array Cardio 💪</h2></figcaption>
+                                    <figcaption><h2>05 - Flex Panel Gallery</h2></figcaption>
                                 </a>
                             </figure>
                         </header>
                         <main>
                             <a href="/challenge-files/05 - Flex Panel Gallery/index.html">Demo</a> |
+                            <a href="/challenge-files/05 - Flex Panel Gallery/my-studies/flex-examples.html">My Studies</a> |
                             <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/05%20-%20Flex%20Panel%20Gallery">Code</a>
                         </main>
                     </section>
