--- a/challenge-files/05 - Flex Panel Gallery/my-studies/flex-examples.html
+++ b/challenge-files/05 - Flex Panel Gallery/my-studies/flex-examples.html
@@ -119,7 +119,7 @@
         .panel-3,
         .panel-6,
         .panel-9{
-            background-color: #444444;            transition-duration: 0.5s;
+            background-color: #444444;
         }
 
         /* flex-grow */
