--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/06 - Type Ahead/index.html">
+                                    <img class="img-fluid" src="/images/challenges/06-type-ahead.png" alt="Type Ahead">
+                                    <figcaption><h2>06 - Type Ahead</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/06 - Type Ahead/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/06%20-%Type%20Ahead">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
     </main>
