--- a/index.html
+++ b/index.html
@@ -126,6 +126,24 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/07 - Array Cardio Day 2/index.html">
+                                    <img class="img-fluid" src="/images/challenges/07-array-cardio.png" alt="Array Cardio - Day 02">
+                                    <figcaption><h2>Day 07 - Array Cardio 💪💪</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/07 - Array Cardio Day 2/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/07%20-%20Array%20Cardio%20Day%202">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
