--- a/challenge-files/06 - Type Ahead/index.html
+++ b/challenge-files/06 - Type Ahead/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <title>Type Ahead 👀</title>
 </head>
 <body>
 
