--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/08 - Fun with HTML5 Canvas/index.html">
+                                    <img class="img-fluid" src="/images/challenges/08-fun-with-html5-canvas.png" alt="Fun with HTML5 Canvas">
+                                    <figcaption><h2>Day 08 - Fun with HTML5 Canvas</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/08 - Fun with HTML5 Canvas/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/08%20-%20Fun%20with%20HTML5%20Canvas">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
     </main>
