feat: allow draw on canvas in touch screen devices.

--- a/challenge-files/08 - Fun with HTML5 Canvas/index.html
+++ b/challenge-files/08 - Fun with HTML5 Canvas/index.html
@@ -19,6 +19,6 @@
       <p>coded by <a href="https://vanribeiro.github.io/" target="_blank">Van Ribeiro</a></p>
     </div>
   </footer>
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
