--- a/challenge-files/08 - Fun with HTML5 Canvas/index.html
+++ b/challenge-files/08 - Fun with HTML5 Canvas/index.html
@@ -13,7 +13,9 @@
       <span>If you are on cell phone, use your fingers... 😉</span>
     </header>
   </main>
-  <canvas id="draw" height="600" width="600"></canvas>
+  <div class="container" id="draw-container">
+    <canvas id="draw" height="600" width="600"></canvas>
+  </div>
   <footer>
     <div class="container">
       <p>coded by <a href="https://vanribeiro.github.io/" target="_blank">Van Ribeiro</a></p>
