--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/09 - Dev Tools Domination/index.html">
+                                    <img class="img-fluid" src="/images/challenges/09-dev-tools-domination.png" alt="Dev Tools Domination">
+                                    <figcaption><h2>Day 09 - Dev Tools Domination</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/09 - Dev Tools Domination/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/08%20-%20Fun%20with%20HTML5%20Canvas">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
     </main>
