--- a/index.html
+++ b/index.html
@@ -171,7 +171,25 @@
                         </header>
                         <main>
                             <a href="/challenge-files/09 - Dev Tools Domination/index.html">Demo</a> |
-                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/08%20-%20Fun%20with%20HTML5%20Canvas">Code</a>
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/09%20-%20Dev%20Tools%20Domination">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/10 - Hold Shift and Check Checkboxes/index.html">
+                                    <img class="img-fluid" src="/images/challenges/10-hold-shift-and-check-checkboxes.png" alt="Hold Shift and Check Checkboxes">
+                                    <figcaption><h2>Day 10 - Hold Shift and Check Checkboxes</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/10 - Hold Shift and Check Checkboxes/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/10%20-%20Hold%20Shift%20and%20Check%20Checkboxes">Code</a>
                         </main>
                     </section>
                 </div>
