do day 11. add a timer feature.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,24 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/11 - Custom Video Player/index.html">
+                                    <img class="img-fluid" src="/images/challenges/11-custom-video-player.png" alt="Custom Video Player">
+                                    <figcaption><h2>Day 11 - 11 - Custom Video Player</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/11 - Custom Video Player/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/11%20-%20Custom%20Video%20Player/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
+        </div>
         </div>
     </main>
     <footer>
