--- a/challenge-files/11 - Custom Video Player/index.html
+++ b/challenge-files/11 - Custom Video Player/index.html
@@ -2,26 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Video Player</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
    <div class="player">
-     <video class="player__video viewer" src="652333414.mp4"></video>
-
+     <video class="player__video viewer" src="media/video/652333414.mp4"></video>
      <div class="player__controls">
+      <!-- <div class="timer">
+        <button class="done"></button>
+        <button class="total"></button>
+      </div> -->
        <div class="progress">
-        <div class="progress__filled"></div>
+            <div class="progress__filled"></div>
        </div>
        <button class="player__button toggle" title="Toggle Play">►</button>
        <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
        <button data-skip="-10" class="player__button">« 10s</button>
        <button data-skip="25" class="player__button">25s »</button>
+       <button class="player__button fullscreen-button">
+         <img id="fullscreen-icon" class="fullscreen-icon" src="media/icons/fullscreen.svg" alt="FullScreen Mode">
+       </button>
      </div>
    </div>
 
-  <script src="scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
