features: add timer to player video/add show/hide the mouse and controls. fix: fullscreen player controls.

--- a/challenge-files/11 - Custom Video Player/index.html
+++ b/challenge-files/11 - Custom Video Player/index.html
@@ -11,10 +11,10 @@
    <div class="player">
      <video class="player__video viewer" src="media/video/652333414.mp4"></video>
      <div class="player__controls">
-      <!-- <div class="timer">
-        <button class="done"></button>
-        <button class="total"></button>
-      </div> -->
+      <div class="timer">
+        <span class="done"></span>
+        <span class="total"></span>
+      </div>
        <div class="progress">
             <div class="progress__filled"></div>
        </div>
@@ -29,6 +29,6 @@
      </div>
    </div>
 
-  <script src="js/scripts.js"></script>
+  <script type="module" src="js/scripts.js"></script>
 </body>
 </html>
