--- a/index.html
+++ b/index.html
@@ -199,13 +199,29 @@
                             <figure>
                                 <a href="/challenge-files/11 - Custom Video Player/index.html">
                                     <img class="img-fluid" src="/images/challenges/11-custom-video-player.png" alt="Custom Video Player">
-                                    <figcaption><h2>Day 11 - 11 - Custom Video Player</h2></figcaption>
+                                    <figcaption><h2>Day 11 - Custom Video Player</h2></figcaption>
                                 </a>
                             </figure>
                         </header>
                         <main>
                             <a href="/challenge-files/11 - Custom Video Player/index.html">Demo</a> |
                             <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/11%20-%20Custom%20Video%20Player/">Code</a>
+                        </main>
+                    </section>
+                </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/12 - Key Sequence Detection/index.html">
+                                    <img class="img-fluid" src="/images/challenges/12-key-sequence-detection.png" alt="Custom Video Player">
+                                    <figcaption><h2>Day 12 - Key Sequence Detection</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/12 - Key Sequence Detection/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/12%20-%20Key%20Sequence%20Detection/">Code</a>
                         </main>
                     </section>
                 </div>
