do day 13. write about it.

--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/13 - Slide in on Scroll/index.html">
+                                    <img class="img-fluid" src="/images/challenges/13-slide-in-on-scroll.png" alt="Scroll in on Scroll">
+                                    <figcaption><h2>Day 13 - Slide in on Scroll</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/13 - Slide in on Scroll/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/13%20-%20Slide%20in%20on%20Scroll/">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
         </div>
         </div>
     </main>
