--- a/index.html
+++ b/index.html
@@ -243,6 +243,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/14 - JavaScript References VS Copying/index.html">
+                                    <img class="img-fluid" src="/images/challenges/14-javascript-references-vs-copying.png" alt="JavaScript References VS Copying">
+                                    <figcaption><h2>Day 14 - JavaScript References VS Copying</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/14 - JavaScript References VS Copying/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/14%20-%20JavaScript%20References%20VS%Copying/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
