--- a/index.html
+++ b/index.html
@@ -259,6 +259,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/15 - LocalStorage/index.html">
+                                    <img class="img-fluid" src="/images/challenges/15-localstorage.jpg" alt="LocalStorage">
+                                    <figcaption><h2>Day 15 - LocalStorage</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/15 - LocalStorage/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/14%20-%20LocalStorage/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
