--- a/index.html
+++ b/index.html
@@ -271,7 +271,25 @@
                         </header>
                         <main>
                             <a href="/challenge-files/15 - LocalStorage/index.html">Demo</a> |
-                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/14%20-%20LocalStorage/">Code</a>
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/15%20-%20LocalStorage/">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/16 - Mouse Move Shadow/index.html">
+                                    <img class="img-fluid" src="/images/challenges/16-mouse-move-shadow.png" alt="Mouse Move Shadow">
+                                    <figcaption><h2>Day 16 - Mouse Move Shadow</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/16 - Mouse Move Shadow/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/16%20-%20Mouse%20Move%20Shadow/">Code</a>
                         </main>
                     </section>
                 </div>
