--- a/index.html
+++ b/index.html
@@ -293,6 +293,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/17 - Sort Without Articles/index.html">
+                                    <img class="img-fluid" src="/images/challenges/17-sort-without-articles.png" alt="Sort Without Articles">
+                                    <figcaption><h2>Day 17 - Sort Without Articles</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/17 - Sort Without Articles/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/17%20-%20Sort%20Without%20Articles/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
