do day 18 and fix broken links.

--- a/index.html
+++ b/index.html
@@ -309,6 +309,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/18 - Adding Up Times with Reduce/index.html">
+                                    <img class="img-fluid" src="/images/challenges/18-adding-up-times-with-reduce.png" alt="Day 18 - Adding Up Times with Reduce">
+                                    <figcaption><h2>Day 18 - Adding Up Times with Reduce</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/18 - Adding Up Times with Reduce/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/18%20-%20Adding%20Up%20Times%20with%20Reduce/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
