--- a/index.html
+++ b/index.html
@@ -343,6 +343,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/20 - Speech Detection/index.html">
+                                    <img class="img-fluid" src="/images/challenges/20-speech-detection.png" alt="Speech Detection">
+                                    <figcaption><h2>Day 20 - Speech Detection</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/20 - Speech Detection/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/20%20-%20Speech%20Detection/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
