fix speed size number.

--- a/challenge-files/21 - Geolocation/index-FINISHED.html
+++ b/challenge-files/21 - Geolocation/index-FINISHED.html
@@ -64,7 +64,7 @@
 
     navigator.geolocation.watchPosition((data) => {
       console.log(data);
-      speed.textContent = data.coords.speed;
+      speed.textContent = (data.coords.speed).toFixed(5);
       arrow.style.transform = `rotate(${data.coords.heading}deg)`;
     }, (err) => {
       console.error(err);
