--- a/challenge-files/22 - Follow Along Link Highlighter/index.html
+++ b/challenge-files/22 - Follow Along Link Highlighter/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>👀👀👀Follow Along Nav</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+  <div class="container">
+    <p class="warning"></p>
     <nav>
       <ul class="menu">
         <li><a href="">Home</a></li>
@@ -24,10 +27,10 @@
       <p>Esse quibusdam, ad, ducimus cupiditate <a href="">nulla</a>, quae magni odit <a href="">totam</a> ut consequatur eveniet sunt quam provident sapiente dicta neque quod.</p>
       <p>Aliquam <a href="">dicta</a> sequi culpa fugiat <a href="">consequuntur</a> pariatur optio ad minima, maxime <a href="">odio</a>, distinctio magni impedit tempore enim repellendus <a href="">repudiandae</a> quas!</p>
     </div>
+  </div>
 
-  <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
-  </script>
+    <script src="js/main.js"></script>
+
 </body>
 </html>
 
