--- a/index.html
+++ b/index.html
@@ -376,12 +376,30 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/22 - Follow Along Link Highlighter/index.html">
+                                    <img class="img-fluid" src="/images/challenges/22-follow-along-link-highlighter.png" alt="Follow Along Link Highlighter">
+                                    <figcaption><h2>Day 22 - Follow Along Link Highlighter</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/22 - Follow Along Link Highlighter/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/21%20-%20Follow%20Along%20Link%20Highlighter/">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
         </div>
         </div>
     </main>
     <footer>
         <div class="container">
-            <p>2020 - coded by <a href="https://vanribeiro.github.io">Van Ribeiro</a></p>
+            <p>&copy; 2020 - page coded by <a href="https://vanribeiro.github.io">Van Ribeiro</a></p>
         </div>
     </footer>
 </body>
