--- a/index.html
+++ b/index.html
@@ -393,6 +393,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/23 - Speech Synthesis/index.html">
+                                    <img class="img-fluid" src="/images/challenges/23-speech-synthesis.png" alt="Speech Synthesis">
+                                    <figcaption><h2>Day 23 - Speech Synthesis</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/23 - Speech Synthesis/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/23%20-%20Speech%20Synthesis/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
