--- a/index.html
+++ b/index.html
@@ -409,6 +409,22 @@
                         </main>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/24 - Sticky Nav/index.html">
+                                    <img class="img-fluid" src="/images/challenges/24-sticky-nav.png" alt="Sticky Nav">
+                                    <figcaption><h2>Day 24 - Sticky Nav</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/24 - Sticky Nav/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/24%20-%20Sticky%20Nav/">Code</a>
+                        </main>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
