--- a/index.html
+++ b/index.html
@@ -426,6 +426,24 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/25 - Event Capture, Propagation, Bubbling and Once/index.html">
+                                    <img class="img-fluid" src="/images/challenges/25-event-capture-propagation-bubbling-and-once.png" alt="Event Capture, Propagation, Bubbling and Once">
+                                    <figcaption><h2>Day 25 - Event Capture, Propagation, Bubbling and Once</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <main>
+                            <a href="/challenge-files/25 - Event Capture, Propagation, Bubbling and Once/index.html">Demo</a> |
+                            <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/25%20-%20Event%20Capture,%20Propagation,%20Bubbling%20and%20Once/">Code</a>
+                        </main>
+                    </section>
+                </div>
+            </div>
         </div>
         </div>
     </main>
