fix mobile version last challenge.

--- a/index.html
+++ b/index.html
@@ -614,7 +614,8 @@
                         <div class="card-content">
                             <div class="stickers">
                                 <span class="sticker-desktop">Desktop</span>
-                                <span class="sticker-mouse-only">Mouse Only</span>
+                                <span class="sticker-mobile">Mobile</span>
+                                <span class="sticker-mouse-only">Better UX with Mouse</span>
                             </div>
                             <div class="card-links">
                                 <a href="/challenge-files/26 - Stripe Follow Along Nav/index.html">Demo</a> |
