--- a/challenge-files/26 - Stripe Follow Along Nav/index.html
+++ b/challenge-files/26 - Stripe Follow Along Nav/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Follow Along Nav</title>
 </head>
@@ -16,7 +17,7 @@
 
     <ul class="cool">
       <li>
-        <a href="#">About Me</a>
+        <a class="link-title" href="#">About Me</a>
         <div class="dropdown dropdown1">
           <div class="bio">
             <img src="https://logo.clearbit.com/wesbos.com">
@@ -25,7 +26,7 @@
         </div>
       </li>
       <li>
-        <a href="#">Courses</a>
+        <a class="link-title" href="#">Courses</a>
         <ul class="dropdown courses">
           <li>
             <span class="code">RFB</span>
@@ -66,7 +67,7 @@
         </ul>
       </li>
       <li>
-        <a href="#">Other Links</a>
+        <a class="link-title" href="#">Other Links</a>
         <ul class="dropdown dropdown3">
           <li><a class="button" href="http://twitter.com/wesbos">Twitter</a></li>
           <li><a class="button" href="http://facebook.com/wesbos.developer">Facebook</a></li>
