fix menu day 26

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         </header>
                         <div class="card-content">
                             <div class="stickers">
-                                <span class="sticker-desktop">Desktop</span>
+                                <span class="sticker-desktop">Better UX on Desktop</span>
                                 <span class="sticker-mobile">Mobile</span>
                                 <span class="sticker-mouse-only">Better UX with Mouse</span>
                             </div>
