--- a/index.html
+++ b/index.html
@@ -624,6 +624,28 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/27 - Click and Drag/index.html">
+                                    <img class="img-fluid" src="/images/challenges/27-click-and-drag.png" alt="Click and Drag">
+                                    <figcaption><h2>Day 27 - Click and Drag</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <div class="card-content">
+                            <div class="stickers">
+                                <span class="sticker-desktop">Desktop</span>
+                                <span class="sticker-mobile">Mobile</span>
+                            </div>
+                            <div class="card-links">
+                                <a href="/challenge-files/27 - Click and Drag/index.html">Demo</a> |
+                                <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/27%20-%20Click%20and%20Drag/">Code</a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
