--- a/index.html
+++ b/index.html
@@ -647,6 +647,30 @@
                     </section>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/28 - Video Speed Controller/index.html">
+                                    <img class="img-fluid" src="/images/challenges/28-video-speed-controller.png" alt="Video Speed Controller">
+                                    <figcaption><h2>Day 28 - Video Speed Controller</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <div class="card-content">
+                            <div class="stickers">
+                                <span class="sticker-desktop">Desktop</span>
+                                <span class="sticker-mobile">Mobile</span>
+                            </div>
+                            <div class="card-links">
+                                <a href="/challenge-files/28 - Video Speed Controller/index.html">Demo</a> |
+                                <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/28%20-%20Video%20Speed%20Controller/">Code</a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
         </div>
         </div>
     </main>
