--- a/challenge-files/29 - Countdown Timer/index.html
+++ b/challenge-files/29 - Countdown Timer/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown Timer</title>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="timer">
@@ -24,6 +25,6 @@
     </div>
   </div>
 
-  <script src="scripts-START.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
