--- a/index.html
+++ b/index.html
@@ -670,6 +670,28 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/29 - Countdown Timer/index.html">
+                                    <img class="img-fluid" src="/images/challenges/29-countdown-timer.png" alt="Countdown Timer">
+                                    <figcaption><h2>Day 29 - Countdown Timer</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <div class="card-content">
+                            <div class="stickers">
+                                <span class="sticker-desktop">Desktop</span>
+                                <span class="sticker-mobile">Mobile</span>
+                            </div>
+                            <div class="card-links">
+                                <a href="/challenge-files/29 - Countdown Timer/index.html">Demo</a> |
+                                <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/29%20-%20Countdown%20Timer/">Code</a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
