--- a/index.html
+++ b/index.html
@@ -692,6 +692,28 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-4">
+                    <section class="card">
+                        <header>
+                            <figure>
+                                <a href="/challenge-files/30 - Whack A Mole/index.html">
+                                    <img class="img-fluid" src="/images/challenges/30-whack-a-mole.png" alt="Whack A Mole">
+                                    <figcaption><h2>Day 30 - Whack A Mole</h2></figcaption>
+                                </a>
+                            </figure>
+                        </header>
+                        <div class="card-content">
+                            <div class="stickers">
+                                <span class="sticker-desktop">Better UX on Desktop</span>
+                                <span class="sticker-mobile">Mobile</span>
+                            </div>
+                            <div class="card-links">
+                                <a href="/challenge-files/30 - Whack A Mole/index.html">Demo</a> |
+                                <a href="https://github.com/vanribeiro/30days-Of-JavaScript/tree/master/challenge-files/30%20-%20Whack%20A%20Mole/">Code</a>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
         </div>
